<resources>
    <string name="app_name">Adidas</string>
    <string name="tv_login">Already have an account?</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_google">CONTINUE</string>
    <string name="btn_facebook">CONTINUE</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="tv_email">EMAIL</string>
    <string name="tv_pass">PASSWORD</string>
    <string name="placeholder_pass">Password</string>
    <string name="placeholder_email">EMAIL</string>
    <string name="placeholder_pass2">PASSWORD</string>
    <string name="btn_login2">LOGIN</string>
    <string name="btn_forgotPass">FORGOT PASSWORD?</string>
    <string name="hintFirstName">FIRST NAME</string>
    <string name="hintLastName">LAST NAME</string>
    <string name="radioMale_text">MALE</string>
    <string name="radioFemale_text">FEMALE</string>
    <string name="hintEmail">EMAIL</string>
    <string name="hintPassword">PASSWORD</string>
    <string name="hintLocation">LOCATION</string>
    <string name="hintBirthdate">BIRTHDATE</string>
    <string name="text_pass_hint">Min. 8 char, incl. 1 uppercase and 1 lowercase letter, and 1 number</string>
    <string name="btnJoinText">JOIN</string>
    <string name="hintTimeAndDifficulty">25 min - Advanced</string>
    <string name="hintTitleWorkout">Upper Body HIIT</string>
    <string name="hintTag">Arms</string>
</resources>