<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_email"
            android:textColor="@color/text_underline2" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_underline2"
            android:ems="10"
            android:hint="@string/placeholder_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/text_underline2"
            android:textColorHint="@color/text_underline2"
            tools:ignore="TextFields,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_pass"
            android:textColor="@color/text_underline2" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text_underline2"
            android:ems="10"
            android:hint="@string/placeholder_pass2"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/text_underline2"
            android:textColorHint="@color/text_underline2"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn_login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color_login"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/btn_login2"
            app:cornerRadius="@dimen/corner_radius2" />

        <Button
            android:id="@+id/btn_forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/btn_forgotPass" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>