<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="0"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"

            android:drawableLeft="@drawable/ic_google"
            android:drawableRight="@drawable/ic_empty"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/btn_google"
            android:textColor="@color/color_google_text"
            app:cornerRadius="@dimen/corner_radius2"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.3"
            android:backgroundTint="@color/color_facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/btn_facebook"
            app:cornerRadius="@dimen/corner_radius2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0.7"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/btn_signup"
            app:cornerRadius="@dimen/corner_radius2"
            app:strokeColor="@color/white"
            app:strokeWidth="@dimen/stroke_size3"
        android:backgroundTint="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/btn_login"
            android:textColor="@color/color_login"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/color_login"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>