<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="@dimen/corner_radius">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_TimeDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintTimeAndDifficulty"
                android:textColor="@color/workouts_timeColor"
                android:textSize="13sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hintTitleWorkout"
                android:textColor="@color/workouts_TitleColor"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/workouts_timeColor"
                    android:hint="@string/hintTag"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tvTag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/workouts_timeColor"
                    android:hint="@string/hintTag"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>